--- a/README.mkd
+++ b/README.mkd
@@ -1,38 +1,44 @@
-Release Notes - SABnzbd 3.1.0 Release Candidate 1
+Release Notes - SABnzbd 3.2.0 Beta 1
 =========================================================
 
-## Changes and bugfixes since 3.1.0 Beta 2
-- Deobfuscate final filenames can now be used when job folders are disabled.
-- Deobfuscate final filenames will ignore blu-ray disc files.
-- Clear error if Complete Folder is set as a subfolder of the Temporary Folder.
-- Filtering of history by category would not filter jobs in post-processing.
+## Changes since 3.1.1
+- Python 3.6 is now the minimum required version. 
+- macOS release is currently restricted to macOS 10.14 (Mojave) and above 
+  due to changes in our build plaform. We are trying to resolve this.
+- Post-processing can be aborted at any stage, including scripts.
+- Improvements in the downloader to recude CPU-load.
+- Custom date ranges for server graphs can be selected.
+- Keep track of article fetching success-rate of each server.
+- Added `Minimum Free Space for Completed Download Folder` option.
+- Added option to `Auto resume` for both `Minimum Free Space` settings.
+- Using SSDP, SABnzbd instances are now listed in `Network` on Windows.
+- Improvements to parsing of job name and filenames listed in the NZB.
+- RSS titles can be edited.
+- Show commit hash when running from git sources.
+- Removed Glitter fade-on-delete.
+- Notify through Notifications if new version is available.
+- Added `10 GB` test download.
+- API-calls `queue` and `history` can now be filterd by `nzo_id`.
+- Windows: `Temporary Download` job folders no longer have a maximum length.
+- Windws/macOS: Update UnRar to 6.0.0 and MultiPar to 1.3.1.3.
 
-## Changes since 3.0.2
-- Added option to automatically deobfuscate final filenames: after unpacking, 
-  detect and rename obfuscated or meaningless filenames to the job name, 
-  similar to the Deobfuscate.py post-processing script. 
-- Switched to Transifex as our translations platform:
-  Help us translate SABnzbd in your language! Add untranslated texts or 
-  improved existing translations here: https://sabnzbd.org/wiki/translate
-- Redesigned job availability-check to be more efficient and reliable.
-- Skip repair on Retry if all sets were previously successfully verified.
-- Passwords included in the filename no longer have to be at the end.
-- Restore limit on length of foldernames (`max_foldername_length`).
-- Added password input box on the Add NZB screen. 
-- Show warning that Pyton 3.5 support will be dropped after 3.1.0.
-- Windows/macOS: update UnRar to 5.91 and MultiPar to 1.3.1.0.
-- Windows: retry `Access Denied` when renaming files on Windows. 
-
-## Bugfixes since 3.0.2
-- Assembler crashes could occur due to race condition in `ArticleCache`.
-- On HTTP-redirects the scheme/hostname/port were ignored when behind a proxy.
-- Strip slash of the end of `url_base` as it could break other code.
-- Unpacking with a relative folder set for a category could fail.
-- Paused priority of pre-queue script was ignored.
-- Duplicate Detection did not check filenames in History.
-- Downloaded bytes could show as exceeding the total bytes of a job.
-- Windows: non-Latin languages were displayed incorrectly in the installer.
-- Windows: could fail to create folders on some network shares.
+## Bugfixes since 3.1.1
+- Memory could leak after jobs were removed from the queue.
+- The active browser URL is used during the wizard.
+- Repairing or Retrying jobs could result in a crash.  
+- API-call `reset_quota` returned nothing.
+- Broken downloads could result in crash during RAR-renaming  
+- Improved obfuscation detection for `Deobfuscate final filenames`.
+- Keep original priority of duplicate jobs.
+- Increase Maximum number of connections per server to `1000`.
+- Update encryption check to handle partially assembled files.
+- Don't activate Windows notifications when running as service.
+- Prevent repetition of unwanted extension warnings.
+- Correct notification category for failed URL fetches.
+- Improvements to the `Add NZB` modal window.
+- Sort script drop-down list alphabetically.
+- Direct Unpack stability fixes.
+- macOS: tray text was misaligned on macOS 11 (Big Sur).
 
 ## Known problems and solutions
 - Read the file "ISSUES.txt"
