--- a/README.mkd
+++ b/README.mkd
@@ -4,21 +4,22 @@ Release Notes - SABnzbd 3.2.0 Beta 1
 ## Changes since 3.1.1
 - Python 3.6 is now the minimum required version. 
 - macOS release is currently restricted to macOS 10.14 (Mojave) and above 
-  due to changes in our build plaform. We are trying to resolve this.
+  due to changes in our build platform. We are trying to resolve this.
 - Post-processing can be aborted at any stage, including scripts.
-- Improvements in the downloader to recude CPU-load.
+- Improvements in the downloader to reduce CPU-load.
 - Custom date ranges for server graphs can be selected.
 - Keep track of article fetching success-rate of each server.
 - Added `Minimum Free Space for Completed Download Folder` option.
 - Added option to `Auto resume` for both `Minimum Free Space` settings.
+- Multiple additional Queue and History columns can be added.
+- Added option to always use full screen width.
 - Using SSDP, SABnzbd instances are now listed in `Network` on Windows.
 - Improvements to parsing of job name and filenames listed in the NZB.
 - RSS titles can be edited.
 - Show commit hash when running from git sources.
-- Removed Glitter fade-on-delete.
 - Notify through Notifications if new version is available.
 - Added `10 GB` test download.
-- API-calls `queue` and `history` can now be filterd by `nzo_id`.
+- API-calls `queue` and `history` can now be filtered by `nzo_id`.
 - Windows: `Temporary Download` job folders no longer have a maximum length.
 - Windws/macOS: Update UnRar to 6.0.0 and MultiPar to 1.3.1.3.
 
