--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,20 @@
-Release Notes - SABnzbd 3.2.0
+Release Notes - SABnzbd 3.2.1 Release Candidate 1
 =========================================================
+
+## Changes and bugfixes since 3.2.0
+- Single `Indexer Categories` in Categories were broken.
+- Program would fail to start if Quota was previously exceeded.
+- Setting `Automatically sort queue` by `Age` was inverted.
+- Show the name of the item to be deleted from the Queue/History 
+  in the confirmation dialog.
+- Handle directories in `.par2`-files during Quick-check.
+- Improvements to `Deobfuscate final filenames`:
+  Rename accompanying (smaller) files with the same basename.
+  Do not rename collections of the same extension.
+- Sanitize names possibly derived from `X-DNZB-EpisodeName`.
+- Widened the RSS feeds table.
+- Add traceback-logging when failing to read the password file.
+- Windows: Use binary mode to make the write test more accurate.
 
 ## Changes since 3.1.1
 - Python 3.6 is the minimum required version. 
