--- a/README.mkd
+++ b/README.mkd
@@ -1,8 +1,8 @@
-Release Notes - SABnzbd 4.1.0 Release Candidate 2
+Release Notes - SABnzbd 4.1.0
 =========================================================
 
 ## Changes since 4.0.3
-- Added a dark mode for the Config, Login, and Wizard.
+- Added a dark mode for the Config, Login, and Wizard pages.
 - Added multi-select to the History.
 - Show the number of items in post-processing when in Tabbed mode.
 - Added option `verify_xff_header` to include `X-Forwarded-For` when
@@ -11,19 +11,21 @@ Release Notes - SABnzbd 4.1.0 Release Candidate 2
 - Moved `Server IP address selection` and `On failure, try
   alternative NZB` to Special settings.
 - Special setting `ipv6_servers` changed to on/off.
-- Only use 7zip to unpack zip files.
+- Only use 7zip to unpack `.zip` files.
 - Windows: Added option `enable_multipar` to use par2cmdline-turbo
   instead of Multipar for verification and repair. It is faster,
   but on Windows it can fail on special (UTF8) filenames.
 - macOS: Switched to par2cmdline-turbo for verification and repair.
 - Linux: Detect more recent versions of 7zip.
-- Windows: Use `All Users` locations during installtion of shortcuts.
+- Windows: Use `All Users` locations during installation of shortcuts.
 - Windows/macOS: Updated Python to 3.11.5, 7Zip to 23.01 and
   UnRar to 6.23. All these updates include security fixes.
 
 ## Bugfixes since 4.0.3
 - Series duplicate detection did not detect duplicates.
 - Sorting would append `.1` to some filenames.
+- If a paused queue contained items with `Force` priority,
+  items with a lower priority would also be downloaded.
 - Not all API-keys were removed during log-sanitization.
 - In certain situations, not all data would be written to disk.
 - Folder names could be sanitized too eagerly.
