--- a/README.mkd
+++ b/README.mkd
@@ -1,35 +1,16 @@
-Release Notes - SABnzbd 4.1.0 Release Candidate 2
+Release Notes - SABnzbd 4.2.0 Alpha 1
 =========================================================
 
-## Changes since 4.0.3
-- Added a dark mode for the Config, Login, and Wizard.
-- Added multi-select to the History.
-- Show the number of items in post-processing when in Tabbed mode.
-- Added option `verify_xff_header` to include `X-Forwarded-For` when
-  validating if connections should be accepted when using a proxy.
-- Added option to purge log files from the Folders Config page.
-- Moved `Server IP address selection` and `On failure, try
-  alternative NZB` to Special settings.
-- Special setting `ipv6_servers` changed to on/off.
-- Only use 7zip to unpack zip files.
-- Windows: Added option `enable_multipar` to use par2cmdline-turbo
-  instead of Multipar for verification and repair. It is faster,
-  but on Windows it can fail on special (UTF8) filenames.
-- macOS: Switched to par2cmdline-turbo for verification and repair.
-- Linux: Detect more recent versions of 7zip.
-- Windows: Use `All Users` locations during installtion of shortcuts.
-- Windows/macOS: Updated Python to 3.11.5, 7Zip to 23.01 and
-  UnRar to 6.23. All these updates include security fixes.
+## Changes since 4.1.0
+- Numerous smaller performance improvements were made.
+- Windows: Removed `SABnzbd-console.exe`.
+  If you need console logging, run `SABnzbd.exe --console`.
+- Windows: Reduced size of installer.
+- Windows/macOS: Updated to Python 3.12.
 
-## Bugfixes since 4.0.3
-- Series duplicate detection did not detect duplicates.
-- Sorting would append `.1` to some filenames.
-- Not all API-keys were removed during log-sanitization.
-- In certain situations, not all data would be written to disk.
-- Folder names could be sanitized too eagerly.
-- Some articles would fail to decode.
-- QuickCheck could wrongly rename files with identical content.
-- Warning about `Scripts Folder` location was triggered incorrectly.
+## Bugfixes since 4.1.0
+- Multi-select in the queue was broken for some users.
+- Removing a failed download from the history could break active downloads.
 
 ## Known problems and solutions
 - Read the file "ISSUES.txt"
